--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -279,6 +279,7 @@
   "deleteMessageDevicesAll": "حذف از تمام دستگاه‌هایم",
   "deleteMessageEveryone": "حذف برای همه",
   "deleteMessageFailed": "{count, plural, one [خطا در حذف پیام] other [خطا در حذف پیام ها]}",
+  "deleteMessageWarning": "{count, plural, one [این پیام قابل حذف برای همه نیست] other [برخی از پیام هایی که انتخاب کرده اید را نمیتوان برای همه حذف کرد]}",
   "deleteMessagesDescriptionEveryone": "آیا مطمئن هستید می‌خواهید این پیام‌ها را برای همه حذف کنید؟",
   "deleting": "در حال حذف",
   "developerToolsToggle": "تاگل ابزار های توسعه دهنده",
@@ -382,6 +383,7 @@
   "groupInviteFailedMultiple": "دعوت از {name} و {count} نفر دیگر به {group_name} انجام نشد",
   "groupInviteFailedTwo": "دعوت از {name} و {other_name} به {group_name} انجام نشد",
   "groupInviteFailedUser": "دعوت از {name} به {group_name} انجام نشد",
+  "groupInviteSending": "{count, plural, one [ارسال دعوت نامه] other [ارسال دعوت نامه ها]}",
   "groupInviteSent": "دعوت نامه ارسال شد",
   "groupInviteSuccessful": "دعوت به گروه موفقیت‌آمیز بود",
   "groupInviteVersion": "کاربران باید آخرین نسخه را داشته باشند تا دعوت‌نامه دریافت کنند",
