--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -35,6 +35,7 @@
   "adminRemovedUser": "<b>{name}</b> is verwijderd als Admin.",
   "adminRemovedUserMultiple": "<b>{name}</b> en <b>{count} anderen</b> zijn verwijderd als beheerder.",
   "adminRemovedUserOther": "<b>{name}</b> en <b>{other_name}</b> zijn verwijderd als beheerder.",
+  "adminSendingPromotion": "{count, plural, one [Beheerder promotie versturen] other [Beheerder promoties versturen]}",
   "adminSettings": "Admin instellingen",
   "adminTwoPromotedToAdmin": "<b>{name}</b> en <b>{other_name}</b> zijn gepromoveerd tot Admin.",
   "andMore": "+{count}",
@@ -274,9 +275,11 @@
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Het is mislukt om de groep bij te werken",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Je hebt geen toestemming om andermans berichten te verwijderen",
   "deleteMessage": "{count, plural, one [Verwijder bericht] other [Verwijder berichten]}",
+  "deleteMessageConfirm": "{count, plural, one [Weet u zeker dat u dit bericht wilt verwijderen?] other [Weet u zeker dat u deze berichten wilt verwijderen?]}",
   "deleteMessageDeleted": "{count, plural, one [Bericht verwijderd] other [Berichten verwijderd]}",
   "deleteMessageDeletedGlobally": "Dit bericht is verwijderd",
   "deleteMessageDeletedLocally": "Dit bericht is op dit apparaat verwijderd",
+  "deleteMessageDescriptionDevice": "{count, plural, one [Weet u zeker dat u dit bericht enkel van dit apparaat wilt verwijderen?] other [Weet u zeker dat u deze berichten enkel van dit apparaat wilt verwijderen?]}",
   "deleteMessageDescriptionEveryone": "Weet u zeker dat u dit bericht voor iedereen wilt verwijderen?",
   "deleteMessageDeviceOnly": "Alleen verwijderen op dit apparaat",
   "deleteMessageDevicesAll": "Verwijder op al mijn apparaten",
@@ -385,6 +388,7 @@
   "groupInviteFailedMultiple": "Het uitnodigen van {name} en {count} anderen naar {group_name} is mislukt",
   "groupInviteFailedTwo": "Het uitnodigen van {name} en {other_name} naar {group_name} is mislukt",
   "groupInviteFailedUser": "Het uitnodigen van {name} naar {group_name} is mislukt",
+  "groupInviteSending": "{count, plural, one [Uitnodiging versturen] other [Uitnodigingen versturen]}",
   "groupInviteSent": "Uitnodiging verzonden",
   "groupInviteSuccessful": "Groepsuitnodiging succesvol",
   "groupInviteVersion": "Gebruikers moeten de nieuwste versie hebben om uitnodigingen te ontvangen",
