--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -274,9 +274,11 @@
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Ошибка при обновлении группы",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "У вас недостаточно прав для удаления других сообщений",
   "deleteMessage": "{count, plural, one [Удалить Сообщение] few [Удалить сообщения] many [Удалить сообщения] other [Удалить сообщения]}",
+  "deleteMessageConfirm": "{count, plural, one [Вы уверены, что хотите удалить это сообщение?] few [Вы уверены, что хотите удалить эти сообщения?] many [Вы уверены, что хотите удалить эти сообщения?] other [Вы уверены, что хотите удалить эти сообщения?]}",
   "deleteMessageDeleted": "{count, plural, one [Сообщение удалено] few [Сообщения удалены] many [Сообщения удалены] other [Сообщения удалены]}",
   "deleteMessageDeletedGlobally": "Это сообщение было удалено",
   "deleteMessageDeletedLocally": "Это сообщение было удалено на этом устройстве",
+  "deleteMessageDescriptionDevice": "{count, plural, one [Вы уверены, что хотите удалить это сообщение только с этого устройства?] few [Вы уверены, что хотите удалить эти сообщения только с этого устройства?] many [Вы уверены, что хотите удалить эти сообщения только с этого устройства?] other [Вы уверены, что хотите удалить эти сообщения только с этого устройства?]}",
   "deleteMessageDescriptionEveryone": "Вы уверены, что хотите удалить это сообщение для всех?",
   "deleteMessageDeviceOnly": "Удалить только на этом устройстве",
   "deleteMessageDevicesAll": "Удалить на всех моих устройствах",
@@ -385,6 +387,7 @@
   "groupInviteFailedMultiple": "Не удалось пригласить {name} и {count} других в {group_name}",
   "groupInviteFailedTwo": "Не удалось пригласить {name} и {other_name} в {group_name}",
   "groupInviteFailedUser": "Не удалось пригласить {name} в {group_name}",
+  "groupInviteSending": "{count, plural, one [Отправка приглашения] few [Отправка приглашений] many [Отправка приглашений] other [Отправка приглашений]}",
   "groupInviteSent": "Приглашение отправлено",
   "groupInviteSuccessful": "Приглашение в группу успешно",
   "groupInviteVersion": "Пользователи должны иметь последнюю версию приложения для получения приглашений",
